# division_ecs

./: .gitignore  Cargo.toml  TODO.md  build.rs
division_ecs_attributes/: Cargo.toml
division_ecs_attributes/src/: lib.rs
examples/: cache_test.rs  query_bench.rs
src/: archetype.rs  archetype_builder.rs  archetype_container.rs  archetype_data_layout.rs  archetype_data_page.rs  archetype_data_page_entities_iterator.rs  archetype_data_page_view.rs  archetype_layout.rs  archetypes_container.rs  bitvec_utils.rs  component.rs  component_query.rs  component_query_access.rs  component_tuple.rs  component_type.rs  components_query.rs  components_query_access.rs  components_read_query.rs  derived_traits.rs  entities_container.rs  entity.rs  entity_component_query.rs  entity_in_archetype.rs  entity_in_archetype_data_page.rs  errors.rs  internal_entity.rs  lib.rs  macros.rs  mem_utils.rs  order_group_container.rs  registry.rs  registry_quries.rs  resource_store.rs  sort_group_container.rs  store.rs  tag_container.rs  tuple.rs
src/query/: access.rs  component.rs  component_page_iter.rs  component_page_iter_view.rs  entity_component.rs  mod.rs  ordered_component.rs
src/tests/: archetype_tests.rs  component_query_test.rs  components_tests.rs  entities_tests.rs  entity_component_query_test.rs  mod.rs  order_group_tests.rs  ordered_component_query_tests.rs  query_test.rs  resources_store.rs  sort_group_tests.rs  tag_tests.rs
tests/: archetype_tests.rs  components_registry_tests.rs  components_tests.rs  entities_tests.rs
