[package]
name = "division_ecs"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.5"

[dependencies]
paste = "1.0.14"
division_ecs_attributes = { path = "./division_ecs_attributes" }