[package]
name = "division_ecs"
version = "0.1.0"
edition = "2021"

[profile.release-with-debug-info]
inherits = "release"
debug = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.5"

[dependencies]
division_ecs_attributes = { path = "./division_ecs_attributes" }
paste = "1.0.14"